--- a/config.ini.example
+++ b/config.ini.example
@@ -1,13 +1,15 @@
-[USVISA]
+[SETUP]
 ; Account and current appointment info from https://ais.usvisa-info.com
-USERNAME = example@example.com
-PASSWORD = xxxxxxxxxx
-SCHEDULE_ID = 99999999
-MY_SCHEDULE_DATE = 2024-01-01
-; Spanish - Colombia
-COUNTRY_CODE = es-co
-; Bogotá
-FACILITY_ID = 25
+USERNAME = xxxxx
+PASSWORD = xxxxx
+SCHEDULE_ID = xxxxx
+MY_SCHEDULE_DATE = 2023-11-11
+; English - Canada
+COUNTRY_CODE = en-ca
+; Vancouver
+FACILITY_ID = 95
+CONTINUE = Continue
+RUN_FOREVER = False
 
 [CHROMEDRIVER]
 ; Details for the script to control Chrome
@@ -15,10 +17,18 @@ LOCAL_USE = True
 ; Optional: HUB_ADDRESS is mandatory only when LOCAL_USE = False
 HUB_ADDRESS = http://localhost:9515/wd/hub
 
+[EMAIL]
+; Get email notification (optional)
+; Your email provider may need extra permission to enable sending email from script
+HOST = 
+PORT = 
+USERNAME = 
+PASSWORD = 
+
 [PUSHOVER]
 ; Get push notifications via https://pushover.net/ (optional)
-PUSH_TOKEN = xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-PUSH_USER = xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+PUSH_TOKEN = xxxx
+PUSH_USER = xxxx
 
 [SENDGRID]
 ; Get email notifications via https://sendgrid.com/ (optional)
